2003-12-16  Darin Adler  <darin@apple.com>

        Reviewed by Richard.

        - finished fix to 3109132: can't open movie file via open panel

        * WebView.subproj/WebView.m: (+[WebView _supportedFileExtensions]):
        Include all the extensions for each MIME type, not jus the preferred one.

2003-12-16  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Darin

	Fix for this bug:

	<rdar://problem/3512199>: WebBridge expiresTimeForResponse can be 
	improved to use better expiration calculations

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge expiresTimeForResponse:]): Switch to use new 
	_calculatedExpiration SPI method on NSURLResponse.

2003-12-15  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3505546>: always get keychain prompt when sending mail using cert downloaded with Safari

        Reviewed by john.

        * WebCoreSupport.subproj/WebKeyGeneration.cpp:
        (signedPublicKeyAndChallengeString): set up the SecAccessRef with "everything goes" restrictions

2003-12-14  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed 3311205: click() on a file input type form element does not work bring up the file chooser as it does in IE

        * WebCoreSupport.subproj/WebFileButton.m: (-[WebFileButton performClick]):
        Add method for clicking, now part of the WebCoreFileButton protocol.
        The rest of the fix is in WebCore.

2003-12-13  Darin Adler  <darin@apple.com>

        Fixed by Ed Voas, reviewed by me.

        - fixed 3278443: CARBON: grow box obscures scroll bar knob

        * Carbon.subproj/CarbonWindowAdapter.m: (-[CarbonWindowAdapter _growBoxRect]):
        Return the grow box so AppKit's scroll bar code will know where it is.

2003-12-12  Ken Kocienda  <kocienda@apple.com>

        * WebCoreSupport.subproj/WebKeyGeneration.cpp:
        (signedPublicKeyAndChallengeString): Fix build-bustin' typo.

2003-12-12  Chris Blumenberg  <cblu@apple.com>

	Fixed: